feat: create get and delete device
